--- a/src/components/kaikai-list/KakaiList.css
+++ b/src/components/kaikai-list/KakaiList.css
@@ -1,11 +1,106 @@
-.friendEmail{
-  background-color: cadetblue;
-  border:2px solid black;
-  width:200px;
+.friendContainer{
+  background-color: var(--greyed);
+  border:none;
+  border-radius: 5px;
+  display:grid;
+  grid-template-columns: 1fr 2fr 2fr;
+  overflow: visible;
+  height: 30px;
+  margin-top:20px;
+  align-items: center;
+  color:mistyrose;
+  padding-inline: 4px;
+  box-shadow: 1px 1px 1px 1px var(--dark-pink);
+  border-top:.5px solid var(--dark-pink);
+  transition-duration: .5s;
+  width:98%;
 }
-.friendEmail:hover{
-  background-color: aquamarine;
+.friendContainer:hover{
+  background-color: var(--dark-pink);
 }
-.friendEmail.active{
-  background-color: aquamarine;
+.friendContainer.active{
+  background-color: var(--black);
+  box-shadow: inset -1px 1px mistyrose;
+}
+.friendContainer.active img{
+  transform: scale(1.2);
+  filter: saturate(1.1);
+}
+
+
+.kaikaiList img{
+  width:40px;
+  border-radius: 50%;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  margin-top:-15px;
+  transition-duration: .5s;
+  border:2px solid var(--dark-pink);
+  filter:saturate(.5)
+}
+.kaikaiList{
+  display:flex;
+  flex-direction: column;
+}
+
+.for-griding{
+  display: grid;
+  grid-template-columns: minmax(0,1fr) minmax(0,2fr) minmax(0,1fr);
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  height:100%;
+  padding:3%;
+  border:2px solid var(--dark-pink2);
+ 
+}
+
+.grid1{
+  grid-column: 1/2;
+  grid-row: 1/3;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  padding-bottom:7px;
+}
+
+.grid2{
+  grid-column: 2/3;
+  grid-row: 1/5;
+ overflow: hidden;
+  padding-bottom:7px;
+}
+
+.grid3{
+  grid-column: 1/2;
+  grid-row: 3/5;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  padding-bottom:7px;
+}
+
+.grid4{
+ grid-column: 1/2;
+ grid-row:5/6
+}
+
+.grid5{
+  grid-column: 2/3;
+  grid-row: 5/6;
+  width:100%;
+}
+
+h2{
+  text-align: right;
+  padding-inline: 10px;
+  position: sticky;
+  top:0;
+  border-bottom: 1px solid var(--dark-pink);
+  background-color: var(--black);
+  z-index: 4;
+  border-radius: 5px;
+  box-shadow: inset -2px 1px mistyrose;
+  display: flex;
+  justify-content: space-between;
+}
+
+h2 form{
+  text-align: left;
 }
