--- a/src/components/message-history/messagehistory.css
+++ b/src/components/message-history/messagehistory.css
@@ -4,9 +4,70 @@
 
 .right-align{
   text-align: right;
+  
+ 
+
 }
 
 .messages{
-  width: 250px;
+  width: 90%;
   margin-inline:auto;
+  height:100%;
 }
+
+.kaikais-header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--black);
+  width:100%;
+  height:50px;
+  border-radius: 5px;
+  box-shadow: inset -2px 2px mistyrose;
+  border-bottom: 1px solid var(--dark-pink);
+  position: sticky;
+  top:0;
+  padding-inline: 5px;
+}
+
+.kaikais-title{
+  background-color: unset;
+  box-shadow: unset;
+  border-bottom: unset;
+}
+
+.messages img{
+  width: 40px;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 2px solid var(--dark-pink2);
+}
+
+.kaikais-body{
+  background: var(--black);
+  height:90%;
+  box-shadow: inset -2px 0 mistyrose;
+  border-bottom: 1px solid var(--dark-pink2);
+  color:mistyrose;
+  padding: 5%;
+  border-radius: 10px;
+  overflow-y:auto;
+}
+
+.message-body{
+  background-color: var(--dark-pink2);
+  width:min-content;
+  white-space: nowrap;
+  box-sizing: content-box;
+  padding-inline: 5%;
+  border-radius: 5px;
+  box-shadow: inset -1px 1px mistyrose ;
+  height:min-content;
+  padding-bottom:5px;
+  margin-bottom:5px;
+  display: inline-block;
+
+ 
+}
+
