--- a/src/components/kaikai-list/KakaiList.css
+++ b/src/components/kaikai-list/KakaiList.css
@@ -87,6 +87,16 @@
   width:100%;
 }
 
+.grid6{
+  grid-column: 3/4;
+  grid-row:1/3;
+}
+
+.grid7{
+  grid-column: 3/4;
+  grid-row: 3/6;
+}
+
 h2{
   text-align: right;
   padding-inline: 10px;
